Fixed horizontal scrolling bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@
 .menu li{
   float:left;
   width: 120px;
-  height: 70 px;
+  height: 70px;
   line-height: 70px;
   text-align: center;
   list-style: none;
@@ -78,3 +78,37 @@
 .body{
     font-family: "Saira", "sans-serif";
 }
+
+.second-image{
+    width: 100%;
+    height: 550px;
+    margin-top: 100px;
+
+}
+
+.profile-picture-1{
+    width: 200px;
+    margin-top: 100px;
+    margin-left: 100px;
+    border-radius: 50%;
+}
+
+.profile-picture-2{
+    width: 200px;
+    margin-top: 100px;
+    margin-right: 100px;
+    border-radius: 50%;
+}
+
+.section-2-row-1{
+    margin-top: 120px;
+}
+
+.section-2-row-2{
+    margin-top: 120px;
+    margin-right: 70px;
+}
+
+
+
+
